--- a/HW_4/index.html
+++ b/HW_4/index.html
@@ -9,11 +9,11 @@
 <body>
     <div class="homepage">
         <div class="top__menu">
-            <div class="top__menu__imgs">
+            <div class="logo">
                 <img class="img_logo" src="./img/logo.png" alt="logo">
                 <img class="img_growbe" src="./img/growbe.png" alt="logo">
             </div>
-            <div class="top__menu__tab">
+            <div class="right__menu">
                 <a href="#">Home</a>
                 <a href="#">About&nbspUs</a>
                 <a href="#">Services</a>
@@ -24,19 +24,19 @@
             </div>
         </div>
         <div class="home">
-            <div class="title">
-                <p class="title__text">SEO & Digital Marketing For Your Website.<p>
+            <div class="home__text">
+                <div class="title">
+                    <p class="title__text">SEO & Digital Marketing For Your Website.<p>
+                </div>
+                <div class="subtitle">
+                    <p class="subtitle__text">Provide all kind of seo services and help to improve seo ranking. Globally incubate standards.</p>
+                </div>
+                <div class="button__meta">
+                    <button class="button_start">Start Now</button>
+                    <button class="button_watch">Watch Video</button>
+                </div>
             </div>
-            <div class="subtitle">
-                <p class="subtitle__text">Provide all kind of seo services and help to improve seo ranking. Globally incubate standards.</p>
-            </div>
-            <div class="button__meta">
-                <button class="button_start">Start Now</button>
-                <button class="button_watch">Watch Video</button>
-            </div>
-            <div class="pngfind__img">
-                <img src="img/pngfind 1.png" alt="pngfind">
-            </div>
+            <img class="pngfind__img" src="img/pngfind 1.png" alt="pngfind">
         </div>
 
     </div>
