--- a/HW_5/index.html
+++ b/HW_5/index.html
@@ -81,9 +81,10 @@
     </div>
 
     <div class="services">
-        <p class="services__title">Why You Should Choose Us.</p>
-        <p class="services__subtitle">Distinctively exploit optimal alignments for intuitive bandwidth. Quickly coordinate e-business applications through revolutionary catalysts.</p>
-
+        <div class="services_top">
+            <p class="services__title">Why You Should Choose Us.</p>
+            <p class="services__subtitle">Distinctively exploit optimal alignments for intuitive bandwidth. Quickly coordinate e-business applications through revolutionary catalysts.</p>
+        </div>
         <div class="serveces__content">
             <div class="servises__item">
                 <img src="./img/services_item_1.png" alt="item1">
