--- a/HW_5/index.html
+++ b/HW_5/index.html
@@ -85,27 +85,27 @@
             <p class="services__title">Why You Should Choose Us.</p>
             <p class="services__subtitle">Distinctively exploit optimal alignments for intuitive bandwidth. Quickly coordinate e-business applications through revolutionary catalysts.</p>
         </div>
-        <div class="serveces__content">
+        <!-- <div class="serveces__content"> -->
             <div class="servises__item">
-                <img src="./img/services_item_1.png" alt="item1">
+                <img class="serivices__img" src="./img/services_item_1.png" alt="item1">
                 <p class="services__H1">Keyword Research</p>
                 <p class="services__text">Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
                 <button class="services__learnmore">Learn More ></button>
             </div>
             <div class="servises__item">
-                <img src="./img/services_item_2.png" alt="item2">
+                <img class="serivices__img" src="./img/services_item_2.png" alt="item2">
                 <p class="services__H1">Seo Optimazadion</p>
                 <p class="services__text">Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
                 <button class="services__learnmore">Learn More ></button>
             </div>
             <div class="servises__item">
-                <img src="./img/services_item_3.png" alt="item3">
+                <img class="serivices__img" src="./img/services_item_3.png" alt="item3">
                 <p class="services__H1">Social Marketing</p>
                 <p class="services__text">Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
                 <button class="services__learnmore">Learn More ></button>
             </div>
 
-        </div>
+        <!-- </div> -->
     </div>
 
 </body>
